--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="https://www.linkedin.com/in/adeyinka-m-207986125/" class="text-blue-400 hover:underline">LinkedIn</a></li>
         <li><a href="https://immigrationbrief.com" class="text-blue-400 hover:underline">ImmigrationBrief</a></li>
         <li><a href="https://www.instagram.com/shotbyolamicheal/" class="text-blue-400 hover:underline">Photography</a></li>
-        <li><a href="'https://open.spotify.com/show/66fZuj6icoIAr1EpKUZS67?si=12d7b627a5cd48f0" class="text-blue-400 hover:underline">Obscure thoughts</a></li>
+        <li><a href="https://open.spotify.com/show/66fZuj6icoIAr1EpKUZS67?si=12d7b627a5cd48f0" class="text-blue-400 hover:underline">Obscure thoughts</a></li>
         <li><a href="https://www.instagram.com/obscurethoughtsbyolamicheal/" class="text-blue-400 hover:underline">Podcast</a></li>
         <li><a href="https://medium.com/@word_addict1" class="text-blue-400 hover:underline">Medium</a></li>
       </ul>
